# ZB_strip_controller

./: .mxproject  CMakeLists.txt  ZB_strip_controller.ioc  stm32wb55xx_flash_cm4.ld
Core/Inc/: WS2812A_driver.h  app_conf.h  color_conversion.h  hw_conf.h  main.h  stm32wbxx_it.h
Core/Src/: WS2812A_driver.c  app_entry.c  color_conversion.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
STM32_WPAN/App/: app_zigbee.c
cmake/stm32cubemx/: CMakeLists.txt
doc/: Datasheet - STM32WB55xx STM32WB35xx - Multiprotocol wireless 32-bit MCU Arm-Sup-®--Sup--based Cortex-Sup-®--Sup--M4 with FPU,.url  STM32WB Nucleo-64 board (MB1641) - User manual.url  STM32WB55RG - Ultra-low-power dual core Arm Cortex-M4 MCU 64 MHz, Cortex-M0+ 32 MHz with 1 Mbyte of Flash memory, Bluetooth L.url  temp_to_xy.ods
